# enosc

./: CMakeLists.txt  build.sh  clean.sh  example.sh  test.sh
enosc/: CMakeLists.txt  ensemble.cu  ensemble.h  euler.cu  euler.h  hdf5.cu  hdf5.h  heun.cu  heun.h  kernels.h  observer.cu  observer.h  roessler.cu  roessler.h  roessler_mod.cu  roessler_mod.h  roessler_mod2.cu  roessler_mod2.h  sakaguchi.cu  sakaguchi.h  sakaguchi_add.cu  sakaguchi_add.h  sakaguchi_mul.cu  sakaguchi_mul.h  stepper.cu  stepper.h  transforms.h  types.cu  types.h
enosc/+enosc/: cbadjust.m  fig_acorr.m  fig_detune.m  fig_funnel.m  fig_order.m  fig_phase.m  fig_polar.m  fig_raw.m  fig_soq.m  hH5C.m  par2str.m  parsnap.m  plot_detune.m  plot_funnel.m  plot_map2.m  plot_map3.m  plot_order.m  plot_raw.m  tile.m
example/: example.conf  example.m
test/: test.m
xis/: CMakeLists.txt  config.cpp  config.h  factory.h  logger.cpp  logger.h  singleton.h
xis/+xis/: hLogger.m  hStyle.m
